fixed form page two alignment

--- a/css/formpagetwo.css
+++ b/css/formpagetwo.css
@@ -66,6 +66,7 @@ form {
 	font-size: 1.125em;
 	color: #630;
 	text-align: center;
+	padding-right: 16%;
 }
 
 #uptothree p {
@@ -121,9 +122,6 @@ form {
 	padding: 3% 4% 3% 22%;	
 	}
 	
-	.logo {
-	background-color: #039;
-	}
 	nav li {
 		display:block;
 	}
@@ -136,7 +134,7 @@ form {
 	#content {
 		width: 87%;
 		padding-left:10%;
-			}
+	}
 
 }
 
@@ -153,10 +151,13 @@ form {
 	background-color: #FFF;
 	padding-left: 3%;
 	}
-	.logo {
-	background-color: #FC3;
-}
 
+#uptothree {
+	
+	
+	padding-right: 3%;
+}
+}
 
 @media screen and (max-width: 480px) {
 
@@ -174,6 +175,7 @@ form {
 	.logo {
 	padding-bottom: 2%;
 	padding-left: 0%;
+		
 	}
 	nav {
 		padding-top: 0%;
@@ -201,22 +203,23 @@ form {
 		text-align: center;
 	}
 .form1 {
-	padding-top: 9%;
-	
+	padding-top: 9%;	
 	
 }
-
 
 .form2 {
 	padding-top: 9%;
-	
-	
+		
 }
 
 .form3 {
-	padding-top: 9%;
+	padding-top: 9%;	
+	
+}
+#uptothree {
 	
 	
+	padding-right: 3%;
 }
 
 }
